src/templates/EmailEditorContent/EmailEditorContent.css
.email-preview-actions {
  align-items: center;
  display: flex;
  justify-content: space-between;
  margin-top: 1rem;
  width: 37.5rem;
}

.email-preview-actions .select-preview-type {
  margin: 0;
  padding: 0;
}

.email-preview-actions .select-preview-type label {
  font-size: var(--font-small);
  font-style: normal;
  padding: 0.5rem 1rem;
}

.share-and-save-buttons {
  align-items: center;
  display: flex;
  gap: 1rem;
}

.share-trigger {
  border-radius: 50%;
  padding: 0.25rem;
  transition: background-color 50ms ease-in;

  &:hover,
  &:focus {
    background-color: var(--gray-light);
  }
}

.share-buttons {
  background-color: var(--white);
  border: 1px var(--black) solid;
  border-radius: 3px;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.share-buttons > button {
  background-color: var(--white);
  border: 0;
  cursor: pointer;
  font-size: var(--font-small);
  font-weight: var(--weight-normal);
  padding: 0.5rem 0.75rem;
  transition: background-color 50ms ease-in;
  text-align: left;
}

.share-buttons > button:hover,
.share-buttons > button:focus {
  background-color: var(--gray-light-medium);
}

.share-buttons > button:active {
  background-color: var(--gray-medium);
}

.save-and-update-buttons {
  display: flex;
  gap: 1rem;
}

.save-and-update-buttons > button {
  border: 1px solid var(--black);
  border-radius: 3px;
  font-size: var(--font-small);
  padding: 0.5rem 0.75rem;
  transition: background-color 50ms ease-in;
  font-weight: var(--weight-bold-light);
  color: var(--gray-dark-extra);

  &:hover,
  &:focus {
    background-color: var(--gray-light-medium);
  }

  &:active {
    background-color: var(--gray-medium);
  }
}

.email-preview {
  box-shadow: 0 0 0.5rem var(--blue-gray-light);
  height: 70vh;
  margin: 1.5rem auto 0;
  overflow: auto;
  width: 37.5rem;
  transition: width ease-in-out 100ms;
}

.email-preview-mobile {
  width: 23rem;
}

